# WyrmCoil

./: AGENTS.md  Cargo.toml  README.md  board.rs  ids.rs  lib.rs  phase.rs  rust-primer.yml  smoke.rs  wyrmcoil.rs
docs/: actuator-subsystems.md  architecture.md  golden-path.md  m59-honest-stop.md  margaret-integration-audit.md  material-toml.md  sdsl-v-authoring.md  sdsl-v.md
docs/Dunewyrm/: architecture.md  authoring.md
examples/: window_loop_skeleton.rs  window_visible_primitive.rs
examples/materials/: flat_magenta.toml  texture_tint.toml
examples/sdslv/: basic_asserts.sdslvtest  flat_color.sdslv  flow_board_reads.sdslv  flow_board_writes.sdslv  flow_cycle_invalid.sdslv  flow_value_lowering.sdslv  generic_forward_pass.sdslv
primer/: rust-primer-examples.yml
src/: lib.rs  wyrmfmt.rs
src/Demo/: mod.rs  persistent_controller.rs  world.rs
src/Dunewyrm/: board.rs  control.rs  ids.rs  lib.rs  mod.rs  (+5 more)
tests/: dunewyrm_smoke.rs  guard_patrol_sample.rs  headless_wgsl_draw_smoke.rs  m45b_engine_demo_split.rs  m52_persistent_controller_sample.rs  m72_margaret_ray_actuator.rs  m73_margaret_triangle_ray_query.rs  m74_ray_query_request_store.rs  m75_pick_ray_query_composition.rs  m76_render_snapshot_ray_scene_bridge.rs  m77_visible_pick_api_seed.rs  m78_world_blackboard_seed.rs  m79_world_geometry_picking_bridge.rs  m80_world_blackboard_pick_resources.rs  m81_world_pick_actuator.rs  m83_asset_actuator_seed.rs  m84_asset_image_decode_seed.rs  render_backend_wgpu_scaffold.rs  window_input_backend_scaffold.rs  winit_wgpu_surface_probe.rs
tools/: wyrmfmt-baseline.txt
(+76 files in other folders)
